# Python-Piscine

./: README.md
Day00/ex00/: Hello.py
Day00/ex01/: format_ft_time.py
Day00/ex02/: find_ft_type.py
Day00/ex03/: NULL_not_found.py
Day00/ex04/: whatis.py
Day00/ex05/: building.py
Day00/ex06/: filterstring.py  ft_filter.py
Day00/ex07/: sos.py
Day00/ex09/: LICENSE.txt  README.md  pyproject.toml
Day00/ex09/ft_package/: __init__.py  count.py
Day01/ex00/: give_bmi.py
Day01/ex01/: array2D.py
Day01/ex02/: load_image.py
Day01/ex03/: zoom.py
Day01/ex04/: load_image.py  rotate.py
Day02/ex00/: load_csv.py
Day02/ex01/: aff_pop.py  load_csv.py
Day02/ex03/: projection_life.py
Day03/ex01/: S1E9.py
Day03/ex02/: DiamondTrap.py  S1E7.py
Day03/ex03/: ft_calculator.py
